# EECS381FinalProject

./: .gitignore  .gitmodules
samples/: cruise_console.txt  cruise_out.txt  errors_console.txt  errors_out.txt  show_console.txt  show_out.txt  status_console.txt  status_out.txt  torpedo_console.txt  torpedo_in.txt  torpedo_out.txt  view_console.txt  view_out.txt  views_console.txt  views_out.txt
src/: Bridge_view.cpp  Bridge_view.h  CMakeLists.txt  Controller.cpp  Controller.h  Cruise_ship.cpp  Cruise_ship.h  Cruiser.cpp  Cruiser.h  Grid_location_view.cpp  Grid_location_view.h  Island.cpp  Island.h  Makefile  Map_view.cpp  Map_view.h  Model.cpp  Model.h  Ocean_map.cpp  Ocean_map.h  Sailing_view.cpp  Sailing_view.h  Ship.cpp  Ship.h  Ship_component.cpp  Ship_component.h  Ship_composite.cpp  Ship_composite.h  Ship_factory.cpp  Ship_factory.h  Ship_group.cpp  Ship_group.h  Sim_object.cpp  Sim_object.h  Skimmer.cpp  Skimmer.h  Tanker.cpp  Tanker.h  Torpedo_boat.cpp  Torpedo_boat.h  (+29 more)
src/test/: Cruiser_test.cpp  Island_test.cpp  Ship_test.cpp  in.txt  test_utility.cpp  test_utility.h
starters/: skeleton_Controller.h  skeleton_Island.h  skeleton_Ship.h  skeleton_Sim_object.h
